--- a/react-portfolio-app/src/App.css
+++ b/react-portfolio-app/src/App.css
@@ -576,7 +576,7 @@ footer .text{
     background-size: cover;
     background-position: 50%;
     /* background-image: url(src/assets/bg-image.jpg); */
-    background-image: url(../src/Pic/9.jpg)
+    background-image: url(../src/Pic/img-test-1.avif)
   }
   
 }
